--- a/frontend/src/app/components/seat-selection/seat-selection.component.html
+++ b/frontend/src/app/components/seat-selection/seat-selection.component.html
@@ -9,8 +9,8 @@
             <div *ngFor="let seatobj of seatrow.seats;index as i">
                     <div class="seat-item seat-space" style="color:white ; background-color:white" *ngIf="seatobj.seatLabel == ''">  &nbsp; </div>
                     <div tooltip="Seat : {{seatobj.seatLabel}} | Price : {{seatobj.price}}" placement="top"
-                    [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip' ,'seat-unavailable' : seatobj.status == 'unavailable' }" 
-                    (click)="selectVIPSeat(seatobj)" [style.background-color]="color" id="s_seat{{seatobj.seatLabel}}" *ngIf="(seatobj.status == 'available' || seatobj.status == 'vip' )&& seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
+                    [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip', 'seat-passline' : seatobj.status == 'passline' ,'seat-unavailable' : seatobj.status == 'unavailable' }" 
+                    (click)="selectSeatMode(seatobj)" [style.background-color]="color" id="s_seat{{seatobj.seatLabel}}" *ngIf="(seatobj.status == 'available' || seatobj.status == 'vip' ||  seatobj.status == 'passline' )&& seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
                     
                     <div tooltip="Seat not available" placement="top"
                     [ngClass]="{ 'seat-item' : true , 'seat-unavailable' : true }" 
@@ -40,7 +40,9 @@
                 <span *ngFor="let seatLabel of selectedSeats" class="badge badge-primary">{{seatLabel}}</span>
             </div>
           <div class="col-rg-12 book-area" *ngIf= "isEntered">
-            <button [disabled]="cart?.selectedSeats?.length == 0" type="button"  (click)="processBooking()" class="btn btn-primary" mdbWavesEffect>Confirm</button>
+            <button [disabled]="cart?.selectedSeats?.length == 0" type="button" (click)="processBooking()" class="btn btn-primary" mdbWavesEffect>Confirm</button>
+            <button  *ngIf="ifMode2Active()" type="button" (click)="deleteChoice()" class="btn btn-danger" mdbWavesEffect>Cancel</button>
+            <h5 *ngIf="ifMode2Active()" class="col-lg-12 no-padding">Do you want to keep choice?</h5>
           </div>
       </div>
     </form>
