--- a/frontend/src/app/components/seat-selection/seat-selection.component.css
+++ b/frontend/src/app/components/seat-selection/seat-selection.component.css
@@ -76,7 +76,52 @@
     overflow-x: auto;
     padding: 5% 36%;
     overflow-y: hidden;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
 }
+
+.seat-container-change {
+    overflow-x: auto;
+    padding: 0% 20%;
+    overflow-y: hidden;
+}
+
+
+.seat-container-change2 {
+    overflow-x: auto;
+    padding: 0% 15%;
+    overflow-y: hidden;
+}
+.ui-container {
+    margin: 10px;
+    overflow: auto;
+}
+
+.ui-selectable {
+  box-sizing: border-box;
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
+  float: left;
+  width: 25%;
+}
+
+.ui-selecting {
+  background-color: red;
+}
+
+.ui-selected {
+  background-color: green;
+}
+
+.ui-unselecting {
+  background-color: blue;
+}
+
 .seat-screen {
     background-color: gray;
     color: white;
