--- a/frontend/src/app/components/seat-selection/seat-selection.component.html
+++ b/frontend/src/app/components/seat-selection/seat-selection.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 seat-container" >
+<div class="col-lg-12 seat-container" id="seatsDIV">
     <form class="form-group" (ngSubmit)="selectVIPSeat(seatobj)">
         <div  *ngFor="let seatrow of seatmap " >
             <div class="col-12 pricing-label" *ngIf="seatChartConfig?.showRowWisePricing && seatrow.seatPricingInformation != ''">{{seatrow.seatPricingInformation}}</div>
@@ -6,7 +6,8 @@
             <div *ngIf="seatChartConfig?.showRowsLabel">
                     <div class="row-label" >  {{seatrow.seatRowLabel}} </div>
             </div>
-            <div *ngFor="let seatobj of seatrow.seats;index as i">
+  
+            <div *ngFor="let seatobj of seatrow.seats;index as i"  (mouseenter)="onMouseOver($event, seatobj)" (mouseleave)="onMouseOver($event, seatobj)">
                     <div class="seat-item seat-space" style="color:white ; background-color:white" *ngIf="seatobj.seatLabel == ''">  &nbsp; </div>
                     <div tooltip="Seat : {{seatobj.seatLabel}} | Price : {{seatobj.price}}" placement="top"
                     [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip', 'seat-passline' : seatobj.status == 'passline' ,'seat-unavailable' : seatobj.status == 'unavailable' }" 
@@ -54,5 +55,31 @@
             </form>
 
     </div>
+
+    <div *ngIf = "forBuying" id="paypal-button-container"></div>
+    <script *ngIf = "forBuying">
+        paypal.Buttons({
+    
+            createSubscription: function(data, actions) {
+    
+              return actions.subscription.create({
+    
+                'plan_id': 'P-60T025628M324113WLYPS7ZI'
+    
+              });
+    
+            },
+    
+    
+            onApprove: function(data, actions) {
+    
+              alert('You have successfully created subscription ' + data.subscriptionID);
+    
+            }
+    
+    
+            }).render('#paypal-button-container');
+      </script>
+
     </div>
  
