--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -53,7 +53,16 @@
                     <td>{{ event.dateFrom | date }}</td>
                     <td>{{ event.dateTo | date }}</td>
                     <td>{{ event.description }}</td>
-                    <td><button type="button" class="btn btn-primary"><i class="far fa-eye" (onclick) = "info()">i</i></button></td>
+                    <td><button type="button" class="btn btn-primary"  id="information" (click) = "info()"><i class="far fa-eye">i</i></button></td>
+                </tr>
+                <tr class="more-info" id="more-info">
+                    <td colspan="8">
+                        <div id="slider">
+                            <button class="next_btn" (click) = "next_slide(1)"> > </button>
+                            <button class="prev_btn" (click) = "next_slide(-1)"> < </button>
+                            <img class ="img_dim" [src]='"assets/"+ img_src'>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
