--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,5 +1,6 @@
 .container {
-    padding: 2rem 0rem;
+  position: relative;
+  width: 50%;
 }
 h4 {
     margin: 2rem 0rem 1rem;
@@ -12,8 +13,8 @@ h4 {
   }
   .next_btn {
     position: absolute;
-    top: 67%;
-    left: 80%;
+    top: 49%;
+    left: 139%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-color: #555;
@@ -27,8 +28,8 @@ h4 {
 
   .prev_btn {
     position: absolute;
-    top: 66%;
-    left: 26.5%;
+    top: 49%;
+    left: -24.5%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-color: #555;
@@ -51,7 +52,7 @@ h4 {
   .img_dim{
     width:  450px;
     height: 250px;
-    margin-left: 30%;
+    margin-left: -33%;
     border-radius: 8px;
   }
 
