--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -54,6 +54,7 @@
                     <td>{{ event.dateTo | date }}</td>
                     <td>{{ event.description }}</td> 
                     <td><button type="button" class="btn btn-primary"  id="information" (click) = "info(event.id)"><i class="far fa-eye">i</i></button></td>
+                    <td><button type="button" class="btn btn-warning" id="reservation" (click) = "reservation(event)"><i class="far fa-eye">r</i></button></td>
                 </tr>
                 <tr class="more-info" id="more-info">
                     <td colspan="8">
