--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,6 +6,9 @@
     <div class="navbar-collapse collapse" id="collapsingNavbar">
       <ul class="navbar-nav mr-auto">
         <li class="navbar navbar-light bg-light">
+            <button class="btn" *ngIf="isSuperAdmin()"  (click) ="showEventAdmins()" id="eventAdmins">Event Admins</button>
+        </li>
+        <li class="navbar navbar-light bg-light">
                 <a class="btn" *ngIf="isLocationEventAdmin()"  href ="/seatmap" id="c_seatmap">Creat seat map</a>
         </li>
         <li class="navbar navbar-light bg-light">
