--- a/frontend/src/app/components/read-delete-location-admin/read-delete-location-admin.component.html
+++ b/frontend/src/app/components/read-delete-location-admin/read-delete-location-admin.component.html
@@ -1,1 +1,30 @@
-<p>read-delete-location-admin works!</p>
+<div class="col-md-3"></div>
+    <div class="col-md-6">
+        <h2 class="form-signin-heading">List Of Location/Event Admins</h2>
+        <td><button type="button" class="btn btn-primary"  id="add" (click) = "addNewAdmin()"><i class="far fa-eye">Create New Event Admin</i></button></td>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>  </th>
+                    <th>Username</th>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                    <th>Date Of Creation</th>
+
+                    <th>  </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let user of users; index as i">
+                    <th scope="row">{{ i + 1 }}</th>
+                    <td>{{ user.username}}</td>
+                    <td>{{ user.name }}</td>
+                    <td>{{ user.lastName }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.date_of_creation }}</td>
+                    <td><button type="button" class="btn btn-primary"  id="delete" (click) = "onDelete(user.username)"><i class="far fa-eye">X</i></button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
