--- a/frontend/src/app/components/ticket-reservation/ticket-reservation.component.html
+++ b/frontend/src/app/components/ticket-reservation/ticket-reservation.component.html
@@ -1,1 +1,72 @@
-<p>ticket-reservation works!</p>
+<div class="col-lg-12 seat-container" id="seatsDIV">
+    <form class="form-group" (ngSubmit)="selectVIPSeat(seatobj)">
+        <div  *ngFor="let seatrow of seatmap " >
+            <div class="col-12 pricing-label" *ngIf="seatChartConfig?.showRowWisePricing && seatrow.seatPricingInformation != ''">{{seatrow.seatPricingInformation}}</div>
+            <div class="seatrow container">
+            <div *ngIf="seatChartConfig?.showRowsLabel">
+                    <div class="row-label" >  {{seatrow.seatRowLabel}} </div>
+            </div>
+  
+            <div *ngFor="let seatobj of seatrow.seats;index as i"  (mouseenter)="onMouseOver($event, seatobj)" (mouseleave)="onMouseOver($event, seatobj)">
+                    <div class="seat-item seat-space" style="color:white ; background-color:white" *ngIf="seatobj.seatLabel == ''">  &nbsp; </div>
+                    <div tooltip="Seat : {{seatobj.seatLabel}} | Price : {{seatobj.price}}" placement="top"
+                    [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip', 'seat-passline' : seatobj.status == 'passline' ,'seat-unavailable' : seatobj.status == 'unavailable', 'seat-reserved' : seatobj.status == 'reserved' }" 
+                    (click)="selectSeatMode(seatobj)" [style.background-color]="color" id="s_seat{{seatobj.seatLabel}}" *ngIf="(seatobj.status == 'available' || seatobj.status == 'vip' ||  seatobj.status == 'passline' || seatobj.status == 'reserved')&& seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
+                    
+                    <div tooltip="Seat not available" placement="top"
+                    [ngClass]="{ 'seat-item' : true , 'seat-unavailable' : true }" 
+                    *ngIf="seatobj.status == 'unavailable' && seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
+            </div>
+        </div>
+        </div>
+
+        <!-- *ngIf="cart?.selectedSeats?.length > 0" -->
+        <div  class="container">
+          <div class="col-lg-16 summary-bar">
+      
+              <div class="col-lg-15">
+                      <div>
+                          <h5>Total Selected : {{ cart?.selectedSeats?.length }}</h5>
+                          <h5>Total Amount :&nbsp;&nbsp; {{cart.totalamount}} Rsd</h5>
+                      </div>
+              </div>
+
+          </div>
+            
+          <div class="col-rg-12 book-area" >
+            <h5 class="col-lg-12 no-padding">Do you want to reserve tickets?</h5>
+            <button [disabled]="cart?.selectedSeats?.length == 0" type="button" (click)="processBooking()" class="btn btn-primary" mdbWavesEffect>Confirm</button> &nbsp; 
+            <button  type="button" (click)="deleteChoice()" class="btn btn-danger" mdbWavesEffect>Cancel</button>
+          </div>
+      </div>
+    </form>
+
+
+    <div *ngIf = "forBuying" id="paypal-button-container"></div>
+    <script *ngIf = "forBuying">
+        paypal.Buttons({
+    
+            createSubscription: function(data, actions) {
+    
+              return actions.subscription.create({
+    
+                'plan_id': 'P-60T025628M324113WLYPS7ZI'
+    
+              });
+    
+            },
+    
+    
+            onApprove: function(data, actions) {
+    
+              alert('You have successfully created subscription ' + data.subscriptionID);
+    
+            }
+    
+    
+            }).render('#paypal-button-container');
+      </script>
+
+</div>
+    
+ 
