listing, updating and creating location as location admin, create location as location admin and register as unregistered user

--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-md-9">
-        <form id="user-profile-form" class="has-validation-callback" (ngSubmit)="createLocationAdmin()">
+        <form id="user-profile-form" class="has-validation-callback" (ngSubmit)="createUser()">
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="firstname">Firstname</label>
-                        <input type="text" data-validation="required" id="firstname" [(ngModel)] = "user.name" name ="name" class="form-control" data-validation-error-msg="Ovo je obavezno polje">
+                        <label for="firstname">Username</label>
+                        <input type="text" data-validation="required" id="username" [(ngModel)] = "user.username" name ="username" class="form-control" data-validation-error-msg="Ovo je obavezno polje">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="lastname">Lastname</label>
-                        <input type="text" data-validation="required" id="lastname" [(ngModel)] = "user.lastName" name ="lastName" class="form-control" data-validation-error-msg="Ovo je obavezno polje">
+                        <label for="lastname">Password</label>
+                        <input type="password" data-validation="required" id="password" [(ngModel)] = "user.password" name ="password" class="form-control" data-validation-error-msg="Ovo je obavezno polje">
                     </div>
                 </div>
             </div>
@@ -19,8 +19,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <div class="field-required">
-                            <label for="username">Username</label>
-                            <input type="text" id="username" [(ngModel)] = "user.username" name ="username" class="form-control" data-validation="required" data-validation-error-msg="Potrebno nam je vaše korisničko ime">
+                            <label for="username">Email</label>
+                            <input type="email" id="email" [(ngModel)] = "user.email" name ="email" class="form-control" data-validation="required" data-validation-error-msg="Ovo je obavezno polje">
                         </div>
                     </div>
                 </div>
@@ -28,16 +28,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input type="text" data-validation="email" id="email" [(ngModel)] = "user.email" name ="email" class="form-control">
+                        <label for="email">Firstname</label>
+                        <input type="text" data-validation="required" id="name" [(ngModel)] = "user.name" name ="name" class="form-control">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <label for="password">Password</label>
+                    <label for="password">Lastname</label>
                     <div class="input-group mb-7">
-                        <input type="password" id="password" [(ngModel)] = "user.password" name ="password" class="form-control">
+                        <input type="text" id="lastName" [(ngModel)] = "user.lastName" name ="lastName" class="form-control">
                     </div>
                 </div>
             </div>
