--- a/frontend/src/app/components/read-update-location/read-update-location.component.html
+++ b/frontend/src/app/components/read-update-location/read-update-location.component.html
@@ -1,6 +1,7 @@
 <div class="col-md-3"></div>
     <div class="col-md-6">
         <h2 class="form-signin-heading">List Of Locations</h2>
+        <td><button type="button" class="btn btn-primary"  id="add" (click) = "addNewLocation()"><i class="far fa-eye">Create New Location</i></button></td>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -20,7 +21,7 @@
                     <td>{{ location.locationCity }}</td>
                     <td>{{ location.user }}</td>
                     <td>{{ location.numberOfHalls }}</td>
-                    <td><button type="button" class="btn btn-primary"  id="delete" (click) = "onDelete(location.id)"><i class="far fa-eye">X</i></button></td>
+                    <td><button type="button" class="btn btn-primary"  id="delete" (click) = "onUpdate(location.name)"><i class="far fa-eye">Update</i></button></td>
                 </tr>
             </tbody>
         </table>
