--- a/frontend/src/app/components/ticket-reservation/ticket-reservation.component.html
+++ b/frontend/src/app/components/ticket-reservation/ticket-reservation.component.html
@@ -7,11 +7,11 @@
                     <div class="row-label" >  {{seatrow.seatRowLabel}} </div>
             </div>
   
-            <div *ngFor="let seatobj of seatrow.seats;index as i"  (mouseenter)="onMouseOver($event, seatobj)" (mouseleave)="onMouseOver($event, seatobj)">
+            <div *ngFor="let seatobj of seatrow.seats;index as i">
                     <div class="seat-item seat-space" style="color:white ; background-color:white" *ngIf="seatobj.seatLabel == ''">  &nbsp; </div>
-                    <div tooltip="Seat : {{seatobj.seatLabel}} | Price : {{seatobj.price}}" placement="top"
-                    [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip', 'seat-passline' : seatobj.status == 'passline' ,'seat-unavailable' : seatobj.status == 'unavailable', 'seat-reserved' : seatobj.status == 'reserved' }" 
-                    (click)="selectSeatMode(seatobj)" [style.background-color]="color" id="s_seat{{seatobj.seatLabel}}" *ngIf="(seatobj.status == 'available' || seatobj.status == 'vip' ||  seatobj.status == 'passline' || seatobj.status == 'reserved')&& seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
+                    <div tooltip="Seat : {{seatobj.seatLabel}} | Price : {{seatobj.price}} | Status: {{seatobj.status}}" placement="top"
+                    [ngClass]="{ 'seat-item' : true , 'seat-available' : seatobj.status == 'available' ,'seat-vip' : seatobj.status == 'vip', 'seat-passline' : seatobj.status == 'passline' ,'seat-unavailable' : seatobj.status == 'unavailable', 'seat-reserved' : seatobj.status == 'reserved', 'unclickable' : seatobj.status =='reserved', 'to_be_seat_reserved' : seatobj.status == 'to_be_reserved'}" 
+                    (click)="selectSeatMode(seatobj)" [style.background-color]="color" id="s_seat{{seatobj.seatLabel}}" *ngIf="(seatobj.status == 'available' || seatobj.status == 'vip' ||  seatobj.status == 'passline' || seatobj.status == 'reserved' || seatobj.status == 'to_be_reserved')&& seatobj.seatLabel != ''">{{seatobj.seatNo}}</div>
                     
                     <div tooltip="Seat not available" placement="top"
                     [ngClass]="{ 'seat-item' : true , 'seat-unavailable' : true }" 
@@ -35,7 +35,7 @@
             
           <div class="col-rg-12 book-area" >
             <h5 class="col-lg-12 no-padding">Do you want to reserve tickets?</h5>
-            <button [disabled]="cart?.selectedSeats?.length == 0" type="button" (click)="processBooking()" class="btn btn-primary" mdbWavesEffect>Confirm</button> &nbsp; 
+            <button [disabled]="cart?.selectedSeats?.length == 0" type="button" (click)="sendOrder()" class="btn btn-primary" mdbWavesEffect>Confirm</button> &nbsp; 
             <button  type="button" (click)="deleteChoice()" class="btn btn-danger" mdbWavesEffect>Cancel</button>
           </div>
       </div>
