--- a/frontend/src/app/components/create-location/create-location.component.html
+++ b/frontend/src/app/components/create-location/create-location.component.html
@@ -18,18 +18,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <div class="field-required">
-                            <label for="admin">Admin</label>
-                            <input type="text" id="admin" [(ngModel)] = "location.user_id" name ="admin" class="form-control" data-validation="required" data-validation-error-msg="Potrebno nam je vaše korisničko ime">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
                         <label for="numberOfHalls">Number Of Halls</label>
-                        <input type="number" id="email" [(ngModel)] = "location.numberOfHalls" name ="numberOfHalls" class="form-control">
+                        <input type="number" id="email" [(ngModel)] = "location.numberOfHalls" name ="numberOfHalls" min="0" class="form-control">
                     </div>
                 </div>
             </div>
